--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,1 +1,48 @@
+//Media Queries
 
+/*
+0-600px:  Phone
+600 - 900px:  Tablet Portrait
+900 - 1200px:  tablet landscape
+1200 - 1800:  normal styles apply here
+
+1800 +:  big desktop
+
+ $breakpoint arguement choices
+-phone
+-tab-port
+-tab-land
+-desktop
+
+*/
+
+@mixin respond($breakpoint) {
+  //600
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+
+  // 900 px
+
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    }
+  }
+
+  //1200px
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content;
+    }
+  }
+
+  // 1800px
+  @if $breakpoint == desktop {
+    @media (min-width: 112.5em) {
+      @content;
+    }
+  }
+}
